--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,13 +8,11 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
-  - repo: https://github.com/dnephin/pre-commit-golang
-    rev: v0.5.0
+  - repo: https://github.com/eujuliu/task-scheduler
+    rev: v1.0.0
     hooks:
-      - id: go-fmt
-      - id: go-imports
-      - id: no-go-testing
       - id: golangci-lint
+      - id: golangci-fmt
       - id: go-unit-tests
   - repo: https://github.com/alessandrojcm/commitlint-pre-commit-hook
     rev: v9.22.0
