--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,14 @@
 PORT=8080
+HOST="0.0.0.0"
+
+ACCESS_TOKEN_SECRET="123"
+REFRESH_TOKEN_SECRET="456"
+
+GIN_MODE=debug
+
+POSTGRES_USER=local_user
+POSTGRES_PASSWORD=local_password
+POSTGRES_DB=taskscheduler
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+DATABASE_URL=postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@$POSTGRES_HOST:$POSTGRES_PORT/$POSTGRES_DB
