feat: added rabbitmq for queue message

--- a/.env.development
+++ b/.env.development
@@ -12,3 +12,9 @@ POSTGRES_DB=taskscheduler
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 DATABASE_URL=postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@$POSTGRES_HOST:$POSTGRES_PORT/$POSTGRES_DB
+
+RABBITMQ_DEFAULT_USER=local_user
+RABBITMQ_DEFAULT_PASS=local_password
+RABBITMQ_PORT=5672
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_CONNECTION_STRING=amqp://$RABBITMQ_DEFAULT_USER:$RABBITMQ_DEFAULT_PASS@$RABBITMQ_HOST:$RABBITMQ_PORT/
