--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -14,6 +14,19 @@ services:
 
     profiles: [scheduler_dev]
 
+  rabbitmq:
+    image: rabbitmq:4-management-alpine
+    container_name: rabbitmq
+    env_file: ./.env.docker
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      interval: 30s
+      timeout: 30s
+      retries: 3
+
   app:
     build:
       context: .
@@ -25,6 +38,8 @@ services:
       - ${PORT}:${PORT}
     depends_on:
       postgres:
+        condition: service_healthy
+      rabbitmq:
         condition: service_healthy
 
     develop:
@@ -55,8 +70,7 @@ services:
       - "http"
       - "--url=${NGROK_URL}"
       - "http://app:${PORT}"
-    environment:
-      NGROK_AUTHTOKEN: ${NGROK_AUTHTOKEN}
+    env_file: ./.env.docker
     ports:
       - 4040:4040
 
