feat: added sliding window counter rate limiter
add a rate limiter with redis verification, i chose the sliding window
counter as the algorithm

--- a/.env.development
+++ b/.env.development
@@ -18,3 +18,5 @@ RABBITMQ_DEFAULT_PASS=local_password
 RABBITMQ_PORT=5672
 RABBITMQ_HOST=rabbitmq
 RABBITMQ_CONNECTION_STRING=amqp://$RABBITMQ_DEFAULT_USER:$RABBITMQ_DEFAULT_PASS@$RABBITMQ_HOST:$RABBITMQ_PORT/
+
+REDIS_ADDRESS="redis:6379"
