--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -16,15 +16,30 @@ services:
 
   rabbitmq:
     image: rabbitmq:4-management-alpine
+    restart: unless-stopped
     container_name: rabbitmq
     env_file: ./.env.docker
     ports:
       - "5672:5672"
       - "15672:15672"
     healthcheck:
-      test: rabbitmq-diagnostics -q ping
-      interval: 30s
-      timeout: 30s
+      test: ["CMD", "rabbitmq-diagnostics", "-q", "ping"]
+      interval: 10s
+      timeout: 10s
+      retries: 3
+
+  redis:
+    image: redis/redis-stack
+    restart: unless-stopped
+    container_name: redis
+    env_file: ./.env.docker
+    ports:
+      - "6379:6379"
+      - "8001:8001"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 3s
       retries: 3
 
   app:
