--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -56,6 +56,8 @@ services:
         condition: service_healthy
       rabbitmq:
         condition: service_healthy
+      redis:
+        condition: service_healthy
 
     develop:
       watch:
@@ -69,6 +71,7 @@ services:
             - tmp/
             - bin/
             - docker*
+            - "*_test.go"
         - action: rebuild
           path: ./env*
           target: /app/
