--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -45,7 +45,7 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.development
     restart: unless-stopped
     container_name: app
     env_file: ./.env.docker
