chore: add .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,14 @@
 NGROK_AUTHTOKEN=
 NGROK_URL=
-
 STRIPE_API_KEY=
 STRIPE_WEBHOOK_SIGNING_SECRET=
 
-NODE_ENV=prod
-GIN_MODE=release
+HOST="0.0.0.0"
 
-JWT_SECRET="123"
 ACCESS_TOKEN_SECRET="123"
 REFRESH_TOKEN_SECRET="456"
+
+GIN_MODE=release
 
 POSTGRES_USER=local_user
 POSTGRES_PASSWORD=local_password
@@ -18,27 +17,22 @@ POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 DATABASE_URL=postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@$POSTGRES_HOST:$POSTGRES_PORT/$POSTGRES_DB
 
-REDIS_HOST="redis"
-REDIS_PORT="6379"
-REDIS_ADDRESS="redis:6379"
-
 RABBITMQ_DEFAULT_USER=local_user
 RABBITMQ_DEFAULT_PASS=local_password
 RABBITMQ_PORT=5672
 RABBITMQ_HOST=rabbitmq
 RABBITMQ_CONNECTION_STRING=amqp://$RABBITMQ_DEFAULT_USER:$RABBITMQ_DEFAULT_PASS@$RABBITMQ_HOST:$RABBITMQ_PORT/
-RABBITMQ_PLUGINS=rabbitmq_prometheus
 
-EMAIL_SMTP_HOST=
-EMAIL_SMTP_PORT=
-EMAIL_USER=
-EMAIL_PASSWORD=
+REDIS_ADDRESS="redis:6379"
 
-HOST="0.0.0.0"
-TASK_PORT=3001
-SSE_PORT=3002
-EMAIL_PORT=3003
+BACKUP_CRON_EXPRESSION="@daily"
+BACKUP_FILENAME="backup-%Y-%m-%dT%H-%M-%S.{{ .Extension }}"
+BACKUP_RETENTION_DAYS=7
 
 GF_PORT=3000
-GF_SECURITY_ADMIN_USER=
-GF_SECURITY_ADMIN_PASSWORD=
+GF_SECURITY_ADMIN_USER=admin
+GF_SECURITY_ADMIN_PASSWORD=admin
+
+SCHEDULER_ENV_PATH=./.env.prod
+SSE_ENV_PATH=../server-sent-events/.env.prod
+EMAIL_WORKER_ENV_PATH=../email-serverless/.env.prod
