--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -87,4 +87,4 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           port: ${{ secrets.SSH_PORT }}
-          script: ./rebuild scheduler
+          script: ${{ secrets.PROJECT_FOLDER }}/rebuild.sh scheduler
